--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Salad App</title>
+    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <section id="inputSection"> 
+        <form>
+            <label for="fruitInput">Enter fruit name:</label>
+            <input id="fruitinput" name="fruit" type="text" placeholder="e.g., banana">
+            <input type=submit value="submit">
+        </form>
+    </section>
+    <section id="fruitSection"> 
+
+    </section>
+    <section id="nutritionSection"> 
+
+    </section>
 </body>
 </html>
