--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Salad App</title>
-    <script src="script2.js"></script>
-    <script src="script.js"></script>
+    <script src="bundle.js" defer></script>
 </head>
 <body>
     <section id="inputSection"> 
