Updating all files

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <section id="inputSection"> 
         <form>
             <label for="fruitInput">Enter fruit name:</label>
-            <input id="fruitinput" name="fruit" type="text" placeholder="e.g., banana">
+            <input id="fruitInput" name="fruit" type="text" placeholder="e.g., banana">
             <input type=submit value="submit">
         </form>
     </section>
     <section id="fruitSection"> 
-
+            <ul></ul>
     </section>
     <section id="nutritionSection"> 
 
