--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </form>
     </section>
     <section id="fruitSection"> 
-        <ul></ul>
+        <ul> 
+            <img src="">
+        </ul>
     </section>
     <section id="nutritionSection"> 
         <p></p>
