--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <input type=submit value="submit">
         </form>
     </section>
+    
+    <section>
+        <form id="create-form">
+           <input id="fruitInput" type="text" name="fruit" placeholder="name">
+           <input type="submit" value="Create">
+        </form>
+        <p id="message"></p>
+    </section>
     <section id="fruitSection"> 
         <ul> 
             <img src="">
@@ -22,5 +30,6 @@
     <section id="nutritionSection"> 
         <p></p>
     </section>
+    
 </body>
 </html>
