Added update and delete buttons - no functionality yet

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
            <input id="fruitInput" type="text" name="fruit" placeholder="Fruit name" required>
            <input id="caloriesInput" type="number" name="calories" placeholder="Calories per 100g" required min="0">
            <button type="submit">Create Fruit</button>
+            <button type="submit">Update Fruit</button>
+           <button type="submit">Delete Fruit</button>
         </form>
         <p id="message"></p>
     </section>
